--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/abelzile/js-rpg#readme",
   "devDependencies": {
-    "babel-core": "^6.7.4",
+    "babel-cli": "^6.7.5",
+    "babel-core": "^6.7.6",
+    "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
@@ -30,14 +32,14 @@
     "javascript-astar": "git+https://github.com/bgrins/javascript-astar.git",
     "javascript-state-machine": "git+https://github.com/jakesgordon/javascript-state-machine.git",
     "json-loader": "^0.5.4",
-    "lodash": "^4.8.2",
+    "lodash": "^4.10.0",
     "pixi.js": "^3.0.11",
     "resource-loader": "^1.6.4",
     "transform-loader": "^0.2.3",
     "uglify-loader": "^1.3.0",
     "url-loader": "^0.5.7",
     "webfontloader": "^1.6.24",
-    "webpack": "^1.12.14",
+    "webpack": "^1.12.15",
     "webpack-dev-server": "^1.14.1",
     "webpack-stream": "^3.1.0"
   }
