--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "brfs": "^1.4.3",
+    "eslint": "^2.8.0",
     "eventemitter2": "^1.0.0",
     "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
@@ -32,14 +33,14 @@
     "javascript-astar": "git+https://github.com/bgrins/javascript-astar.git",
     "javascript-state-machine": "git+https://github.com/jakesgordon/javascript-state-machine.git",
     "json-loader": "^0.5.4",
-    "lodash": "^4.10.0",
+    "lodash": "^4.11.1",
     "pixi.js": "^3.0.11",
     "resource-loader": "^1.6.4",
     "transform-loader": "^0.2.3",
     "uglify-loader": "^1.3.0",
     "url-loader": "^0.5.7",
     "webfontloader": "^1.6.24",
-    "webpack": "^1.12.15",
+    "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-stream": "^3.1.0"
   }
