--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "javascript-astar": "git+https://github.com/bgrins/javascript-astar.git",
     "json-loader": "^0.5.4",
     "lodash": "^4.13.1",
+    "pixi-extra-filters": "^1.1.0",
     "pixi.js": "^3.0.11",
     "resource-loader": "^1.7.0",
     "transform-loader": "^0.2.3",
