--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "javascript-astar": "git+https://github.com/bgrins/javascript-astar.git",
     "json-loader": "^0.5.4",
     "lodash": "^4.13.1",
-    "pixi-extra-filters": "^1.1.0",
-    "pixi.js": "^3.0.11",
+    "pixi.js": "^4.1.1",
     "resource-loader": "^1.7.0",
     "transform-loader": "^0.2.3",
     "uglify-loader": "^1.3.0",
@@ -43,5 +42,8 @@
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-stream": "^3.2.0"
+  },
+  "dependencies": {
+    "babelify": "^7.3.0"
   }
 }
