--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "gulp": "^3.9.4",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3",
+    "hson-loader": "^2.0.0",
     "javascript-astar": "git+https://github.com/bgrins/javascript-astar.git",
     "json-loader": "^0.5.4",
     "lodash": "^4.13.1",
-    "pixi.js": "^4.1.1",
+    "pixi.js": "^4.2.3",
     "resource-loader": "^1.7.0",
     "transform-loader": "^0.2.3",
     "uglify-loader": "^1.3.0",
