--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "javascript-astar": "git+https://github.com/bgrins/javascript-astar.git",
     "json-loader": "^0.5.4",
     "lodash": "^4.17.4",
+    "pixi-extra-filters": "^1.1.0",
     "pixi.js": "^4.3.4",
     "resource-loader": "^2.0.4",
     "transform-loader": "^0.2.3",
