--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "babel-loader": "^7.0.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
+    "browserify-versionify": "^1.0.6",
     "eslint": "^3.15.0",
     "eventemitter2": "^4.1.0",
     "file-loader": "^0.11.2",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0",
+    "ify-loader": "^1.0.4",
     "javascript-astar": "git+https://github.com/bgrins/javascript-astar.git",
     "json-loader": "^0.5.4",
     "lodash": "^4.17.4",
