--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "browserify-versionify": "^1.0.6",
-    "eventemitter2": "^4.1.0",
+    "eventemitter2": "^4.1.2",
     "file-loader": "^0.11.2",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
@@ -34,11 +34,14 @@
     "lodash": "^4.17.4",
     "pixi-extra-filters": "^1.1.4",
     "pixi.js": "^4.5.3",
-    "resource-loader": "^2.0.8",
+    "resource-loader": "^2.0.9",
     "transform-loader": "^0.2.3",
-    "uglify-loader": "^1.3.0",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0",
+    "uglify-loader": "^2.0.0",
+    "webpack": "^3.3.0",
+    "webpack-dev-server": "^2.5.1",
     "webpack-stream": "^3.2.0"
+  },
+  "dependencies": {
+    "enhanced-resolve": "^3.3.0"
   }
 }
