--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "browserify-versionify": "^1.0.6",
+    "enhanced-resolve": "^3.3.0",
     "eventemitter2": "^4.1.2",
     "file-loader": "^0.11.2",
     "gulp": "^3.9.1",
@@ -30,18 +31,16 @@
     "gulp-uglify": "^2.0.0",
     "ify-loader": "^1.0.4",
     "javascript-astar": "git+https://github.com/bgrins/javascript-astar.git",
-    "json-loader": "^0.5.4",
+    "json-loader": "^0.5.7",
     "lodash": "^4.17.4",
     "pixi-extra-filters": "^1.1.4",
-    "pixi.js": "^4.5.3",
+    "pixi.js": "^4.5.4",
     "resource-loader": "^2.0.9",
     "transform-loader": "^0.2.3",
     "uglify-loader": "^2.0.0",
     "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.5.1",
-    "webpack-stream": "^3.2.0"
-  },
-  "dependencies": {
-    "enhanced-resolve": "^3.3.0"
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-dev-server": "^2.6.1",
+    "webpack-stream": "^3.2.0",
   }
 }
