--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "webpack": "^3.3.0",
     "webpack-dev-middleware": "^1.11.0",
     "webpack-dev-server": "^2.6.1",
-    "webpack-stream": "^3.2.0",
+    "webpack-stream": "^3.2.0"
   }
 }
