--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "An RPG.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/webpack",
+    "start": "./node_modules/.bin/webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -17,18 +19,12 @@
   },
   "homepage": "https://github.com/abelzile/js-rpg#readme",
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
     "browserify-versionify": "^1.0.6",
+    "clean-webpack-plugin": "^0.1.16",
     "enhanced-resolve": "^3.4.1",
     "eventemitter2": "^4.1.2",
     "file-loader": "^0.11.2",
-    "gulp": "^3.9.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^3.0.0",
+    "html-webpack-plugin": "^2.30.1",
     "ify-loader": "^1.0.4",
     "javascript-astar": "git+https://github.com/bgrins/javascript-astar.git",
     "json-loader": "^0.5.7",
@@ -39,8 +35,6 @@
     "transform-loader": "^0.2.3",
     "uglify-loader": "^2.0.0",
     "webpack": "^3.5.4",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.7.1",
-    "webpack-stream": "^4.0.0"
+    "webpack-dev-server": "^2.7.1"
   }
 }
