--- a/package.json
+++ b/package.json
@@ -19,21 +19,15 @@
   },
   "homepage": "https://github.com/abelzile/js-rpg#readme",
   "devDependencies": {
-    "browserify-versionify": "^1.0.6",
     "clean-webpack-plugin": "^0.1.16",
-    "enhanced-resolve": "^3.4.1",
     "eventemitter2": "^4.1.2",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
-    "ify-loader": "^1.0.4",
     "javascript-astar": "git+https://github.com/bgrins/javascript-astar.git",
-    "json-loader": "^0.5.7",
     "lodash": "^4.17.4",
-    "pixi-extra-filters": "^1.1.4",
+    "pixi-filters": "^2.0.1",
     "pixi.js": "^4.5.5",
-    "resource-loader": "^2.0.9",
-    "transform-loader": "^0.2.3",
-    "uglify-loader": "^2.0.0",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
     "webpack": "^3.5.4",
     "webpack-dev-server": "^2.7.1"
   }
